loading align bugfx

--- a/src/stylesheets/partials/loading.scss
+++ b/src/stylesheets/partials/loading.scss
@@ -221,6 +221,8 @@
   &::before,
   &::after {
     content: ' ';
+    left: 0;
+    top: 0;
     position: absolute;
     width: 100%;
     height: 100%;
